--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/nov2.jpg" alt="Calendar Layout" loading="lazy">
+                  <img src="./assets/images/nov 2.jpg" alt="Calendar Layout" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">layout</h3>
