--- a/index.html
+++ b/index.html
@@ -565,9 +565,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Multimedia editor</h4>
+              <h4 class="h4 timeline-item-title">Social Media Manager</h4>
 
-              <span>2023 — present</span>
+              <span>2023 — 2025</span>
 
               <p class="timeline-text">
                 My main duty as a multimedia editor was typically involve creating and refining content that combines visual and audio elements for maximum impact.
